--- a/Pages/Company/CompanyView.razor
+++ b/Pages/Company/CompanyView.razor
@@ -32,7 +32,7 @@ else
         </div>
     </div>
 
-    <div class="company-details">
+    <div class="company-details-card">
         <div class="company-title mb-2">Company Description</div>
         <p>@companyObject.Description</p>
         <div class="company-title mb-2">Company Roles</div>
