--- a/Pages/Projects/ProjectsIndex.razor
+++ b/Pages/Projects/ProjectsIndex.razor
@@ -1,9 +1,10 @@
 ﻿@page "/projects"
 @using Osiris.Data
 @inject ProjectService projectService
+@inject CompanyService companyService
 @inject NavigationManager NavigationManager
 
-<div class="container pl-0">
+<div class="container mb-4 pl-0">
     <div class="row">
         <div class="col-6">
             <h3>Projects</h3>
@@ -21,13 +22,41 @@
 }
 else
 {
+<div class="container">
     @foreach (var project in projectListObj)
     {
-        <div class="osiris-card mt-3">
-            <div class="text-center text-uppercase">@project.Name</div>
-            <a class="nav-link oi oi-arrow-circle-right" href="/project/project-view/@project.ProjectId" />
-        </div>
+    <div class="osiris-card mb-3" @onclick="() => NaviagateToProject(project.ProjectId)">
+        <div class="text-capitalize mb-3" style="font-weight: 700; font-size: 20px">@project.Name</div>
+        @if (project.Status.Equals("Complete"))
+        {
+            <div class="mr-2" style="display: inline">Complete</div>
+            <div class="oi oi-circle-check" style="color: #16C79A; font-size: 20px; display: inline"></div>
+        }
+        else
+        {
+            <div class="mr-2" style="display: inline">Incomplete</div>
+            <div class="sx oi oi-circle-check" style="display: inline; font-size: 20px;"></div>
+        }
+        @if (companyListObj is null)
+        {
+            <LoadingSpinner />
+        }
+        else
+        {
+            foreach (var company in companyListObj)
+            {
+                @if (company.CompanyId.Equals(project.CompanyId))
+                {
+                    <div class="project-company-container mt-3 p-2">
+                        <div class="mx-3 oi oi-grid-two-up" style="display: inline; color: #fff;"></div>
+                        <div style="display: inline">@company.Name</div>
+                    </div>
+                }
+            }
+        }
+    </div>
     }
+</div>
     @if (OpenAddProjectDialog)
     {
         <ProjectCreate OnClose="@(AddProject)" />
@@ -36,15 +65,22 @@ else
 
 @code {
     List<Project> projectListObj;
+    List<Company> companyListObj;
 
     private async Task loadData()
     {
         projectListObj = await Task.Run(() => projectService.GetAllProjectsAsync());
+        companyListObj = await Task.Run(() => companyService.GetAllCompaniesAsync());
         StateHasChanged();
     }
     protected override async Task OnInitializedAsync()
     {
         await loadData();
+    }
+
+    private void NaviagateToProject(Guid projectId)
+    {
+        NavigationManager.NavigateTo($"/project/project-view/{projectId}");
     }
 
     /* Model Logic */
