--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -29,12 +29,17 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
-                <span class="oi oi-list" aria-hidden="true"></span> Projects
+                <span class="oi oi-folder" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="companies">
-                <span class="oi oi-list" aria-hidden="true"></span> Company
+                <span class="oi oi-grid-two-up" aria-hidden="true"></span> Company
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="report">
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Report
             </NavLink>
         </li>
     </ul>
