--- a/Pages/Report/Report.razor
+++ b/Pages/Report/Report.razor
@@ -1,7 +1,6 @@
 ﻿@page "/report"
 @using Osiris.Data
 @inject CompanyService companyService
-@inject IJSRuntime JS
 @inject NavigationManager NavigationManager
 
 <h3>Report</h3>
@@ -29,7 +28,7 @@ else
         </tr>
         @foreach (var company in companyListObj)
         {
-            <tr @onclick="() => OpenProjectReport(company.CompanyId)">
+            <tr @onclick="() => OpenProjectReport(company.Name, company.CompanyId)">
                 <td>@company.Name</td>
                 <td>@company.Description</td>
             </tr>
@@ -40,16 +39,13 @@ else
 
 @code {
     List<Company> companyListObj;
-    Company companyObject = new Company();
     private String companyFilter = String.Empty;
-    private String d;
 
     private async Task loadData()
     {
         companyListObj = await Task.Run(() => companyService.GetAllCompaniesAsync());
         StateHasChanged();
     }
-
     protected override async Task OnInitializedAsync()
     {
         await loadData();
@@ -60,10 +56,8 @@ else
         companyListObj = await Task.Run(() => companyService.SearchCompany(companyFilter));
         StateHasChanged();
     }
-
-    private void OpenProjectReport(Guid companyId)
+    private void OpenProjectReport(String companyName, Guid companyId)
     {
-        NavigationManager.NavigateTo($"/report/company-report/{companyId}");
+        NavigationManager.NavigateTo($"/report/company-report/{companyName}/{companyId}");
     }
-
 }
