--- a/Pages/Report/ProjectTicketReport.razor
+++ b/Pages/Report/ProjectTicketReport.razor
@@ -1,9 +1,15 @@
 ﻿@page "/report/company-report/{CompanyName}/{CompanyId}/ticket-report/{ProjectName}/{ProjectId}"
 @using Osiris.Data
 @inject TicketService ticketService
+@inject UserService userService
 @inject NavigationManager NavigationManager
 
-<h3>@ProjectName - Ticket Report</h3>
+<div class="mb-5">
+    <div class="back-button-container" style="display: inline">
+        <div class="oi oi-chevron-left" @onclick="GoBack" style="color: #fff;" />
+    </div>
+    <h3 style="display: inline">@CompanyName Company - @ProjectName Project - Ticket Report</h3>
+</div>
 
 @if (ticketListObj is null)
 {
@@ -11,36 +17,89 @@
 }
 else
 {
-    <form>
-        <label for="Status" class="control-label">Status</label>
-        <select @bind="ticketStatusFilter">
-            <option value="All" selected>All</option>
-            <option value="Complete">Complete</option>
-            <option value="Incomplete">Incomplete</option>
-        </select>
 
-        <input type="date" @bind="@ticketStartDateFilter" />
-        <button @onclick="filterByStatus" type="button">Filter</button>
-        <button @onclick="ResetDate" type="button">Reset</button>
-    </form>
+    <div class="mb-4">
+        <div class="row">
+            <div class="col-3">
+                <select class="custom-select" @bind="ticketStatusFilter">
+                    <option value="All" selected>All</option>
+                    <option value="Complete">Complete</option>
+                    <option value="Incomplete">Incomplete</option>
+                </select>
+            </div>
+            <div class="col-3">
+                <input class="form-control" type="date" @bind="@ticketStartDateFilter" />
+            </div>
+            <div class="col-4">
+                <button class="btn-main mx-3" @onclick="filterByStatus" type="button">Filter</button>
+                <button class="btn-outlined" @onclick="ResetDate" type="button">Reset</button>
+            </div>
+        </div>
+    </div>
 
-    <table>
-        <tr>
-            <th>Ticket Name</th>
-            <th>Description</th>
-        </tr>
+    <div class="osiris-secondary-card-heading p-2 mb-2">
+        <div class="row">
+            <div class="col">
+                Ticket Name
+            </div>
+            <div class="col">
+                Assigned User
+            </div>
+            <div class="col">
+                Description
+            </div>
+            <div class="col">
+                Ticket Status
+            </div>
+            <div class="col">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-scroll mb-3">
         @foreach (var ticket in ticketListObj)
         {
-            if (ticket.ProjectId.ToString().Equals(ProjectId))
+            @if (ticket.ProjectId.ToString().Equals(ProjectId))
             {
-                <tr>
-                    <td>@ticket.Name</td>
-                    <td>@ticket.Description</td>
-                </tr>
+                <div class="ticket-report-card p-3 my-1">
+                    <div class="row">
+                        <div class="oi oi-pin px-3" style="color: black"></div>
+                        <div class="col">
+                            @ticket.Name
+                        </div>
+                        <div class="col">
+                            @if (userListObj is null)
+                            {
+                                <LoadingSpinner />
+                            } else {
+                                foreach (var user in userListObj) {
+                                    if(user.UserId.ToString().Equals(ticket.AssignedUser)) {
+                                        @user.Name
+                                    }
+                                }
+                            }
+                        </div>
+                        <div class="col">
+                            @ticket.Description
+                        </div>
+                        <div class="col">
+                            <div class="mr-4" >@ticket.Status</div>
+                        </div>
+                        <div class="col">
+                            @if (ticket.Status.Equals("Complete"))
+                            {
+                                <div class="oi oi-circle-check" style="color: #16C79A;" />
+                            }
+                            else
+                            {
+                                <div class="oi oi-circle-check" />
+                            }
+                        </div>
+                    </div>
+                </div>
             }
         }
-    </table>
-    <button class="btn-main" @onclick="GoBack">GO Back</button>
+    </div>
 }
 
 @code {
@@ -54,12 +113,14 @@ else
     public String ProjectName { get; set; }
 
     List<Ticket> ticketListObj;
+    List<User> userListObj;
     private String ticketStatusFilter = "All";
     private DateTime ticketStartDateFilter = DateTime.MinValue;
 
     private async Task loadData()
     {
         ticketListObj = await Task.Run(() => ticketService.GetAllTicketsAsync());
+        userListObj = await Task.Run(() => userService.GetAllUsersAsync());
         StateHasChanged();
     }
     protected override async Task OnInitializedAsync()
