--- a/Pages/Report/Report.razor
+++ b/Pages/Report/Report.razor
@@ -28,7 +28,7 @@ else
                 Company Name
             </div>
             <div class="col">
-                Company Name
+                Company Description
             </div>
         </div>
     </div>
@@ -38,6 +38,7 @@ else
         {
             <div class="osiris-secondary-card p-3 my-1">
                 <div class="row" @onclick="() => OpenProjectReport(company.Name, company.CompanyId)">
+                    <div class="oi oi-briefcase px-3" style="color: black"></div>
                     <div class="col">
                         @company.Name
                     </div>
