--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -169,6 +169,29 @@ tr:not(:first-child):hover {
     background-color: #16C79A;
     color: #fff;
 }
+.osiris-primary-border-card {
+    border: 2px solid #0F0E17;
+    border-radius: 8px;
+    width: 168vh;
+    padding: 25px;
+    height: 70vh;
+    overflow-y: scroll;
+}
+.osiris-project-card {
+    width: 18rem;
+    min-height: 26vh;
+    background-color: #0F0E17;
+    color: #ffffff;
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    transition: background-color .3s;
+}
+.osiris-project-card:hover {
+    background-color: #fff;
+    color: #000;
+    cursor: pointer;
+}
 
 .container-scroll {
     height: 57vh;
@@ -403,8 +426,8 @@ tr:not(:first-child):hover {
 
 /* back button */
 .back-button-container {
-    border: 2px solid #000;
-    background-color: black;
+    border: 2px solid #0F0E17;
+    background-color: #0F0E17;
     border-radius: 25%;
     margin-right: 25px;
     padding: 5px;
