--- a/Pages/Projects/ProjectsIndex.razor
+++ b/Pages/Projects/ProjectsIndex.razor
@@ -50,7 +50,7 @@ else
                                 @if (company.CompanyId.Equals(project.CompanyId))
                                 {
                                     <div class="project-company-container mt-3 p-2">
-                                        <div class="mx-3 oi oi-grid-two-up" style="display: inline; color: #fff;"></div>
+                                        <div class="mx-3 oi oi-briefcase" style="display: inline; color: #fff;"></div>
                                         <div style="display: inline">@company.Name</div>
                                     </div>
                                 }
