--- a/App.razor
+++ b/App.razor
@@ -1,7 +1,9 @@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <CascadingValue Value="this">
+                <RouteView RouteData="@routeData" DefaultLayout="this.LayoutType" />
+            </CascadingValue>
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
@@ -10,3 +12,16 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+@code {
+    private Type LayoutType = typeof(MainLayout);
+
+    public void SetLayout(Type layout)
+    {
+        if (layout != LayoutType)
+        {
+            this.LayoutType = layout;
+            StateHasChanged();
+        }
+    }
+}
