--- a/Pages/Company/CompanyView.razor
+++ b/Pages/Company/CompanyView.razor
@@ -91,6 +91,16 @@ else
                                 <ValidationMessage For="@(() => userObject.Name)" />
                             </div>
                             <div class="form-group">
+                                <label for="Email" class="control-label">Email</label>
+                                <InputText type="email" @bind-Value="userObject.Email"></InputText>
+                                <ValidationMessage For="@(() => userObject.Email)" />
+                            </div>
+                            <div class="form-group">
+                                <label for="Password" class="control-label">Password</label>
+                                <InputText type="password" @bind-Value="userObject.Password"></InputText>
+                                <ValidationMessage For="@(() => userObject.Password)" />
+                            </div>
+                            <div class="form-group">
                                 <label for="Designation" class="control-label">User Type</label>
                                 <InputSelect @bind-Value="@userObject.Designation">
                                     <option value="" selected disabled hidden>Choose User Type</option>
