--- a/Shared/CollabNavMenu.razor
+++ b/Shared/CollabNavMenu.razor
@@ -8,18 +8,8 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column text-uppercase">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/home" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -30,16 +20,6 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="oi oi-folder" style="color: #fff" aria-hidden="true"></span> Projects
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="companies">
-                <span class="oi oi-briefcase" style="color: #fff" aria-hidden="true"></span> Company
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="report">
-                <span class="oi oi-document" style="color: #fff" aria-hidden="true"></span> Report
             </NavLink>
         </li>
     </ul>
