--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -486,4 +486,11 @@ tr:not(:first-child):hover {
     border-radius: 50%
 }
 
-/* Modal Styles */
+/* Login Styles */
+.register-card-container {
+    background-color: #ffffff;
+    width: 168vh;
+    color: #000000;
+    padding: 25px;
+    border-radius: 8px;
+}
